# room-manager

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .release-please-manifest.json  .tool-versions  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  eslint.config.js  flake.nix  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  tsconfig.json
.changeset/: flat-bars-hammer.md
.cursor/rules/: directorystructure.mdc  global.mdc  project-structure.mdc  technologystack.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  changesets.yml  check.yml  ci.yml  release-please.yml  release.yml  test.yml
crates/app/: Cargo.toml
crates/app/src/: config.rs  lib.rs  main.rs  reader.rs
crates/app/src/app/: mod.rs  touch_card.rs
crates/app/src/domain/: entities.rs  errors.rs  mod.rs
crates/app/src/infra/: api_reqwest.rs  distance_sensor.rs  door_controller.rs  door_sensor.rs  gpio_door_lock.rs  key_controller.rs  mod.rs  player_rodio.rs  reader_pasori.rs  reader_pcsc.rs  system_clock.rs
crates/app/src/runtime/: mod.rs  portable.rs  raspi.rs
crates/app/src/sounds/: mod.rs
crates/app/src/tests/: mod.rs  touch_card.rs
crates/pasori/: Cargo.toml
crates/pasori/src/: felica.rs  lib.rs  main.rs  transport.rs
crates/pasori/src/device/: mod.rs  rcs380.rs
crates/pasori/src/tag/: mod.rs  tt3.rs
docs/: ARCHITECTURE.md  PLAN.md  RUNBOOK.md  SPEC.md  STATUS.md  door_sensor_setup.md
examples/: door_detection.rs
nfc/: Cargo.toml  index.js  package.json  pnpm-lock.yaml
nfc/npm/darwin-arm64/: README.md  package.json
nfc/npm/linux-arm-gnueabihf/: README.md  package.json
src/: index.ts  main.rs
src/device/: mod.rs  rcs380.rs
