[package]
name = "room-manager"
version = "0.2.3"
edition = "2024"

[features]
default = ["raspi-runtime"]
raspi-runtime = [
  "dep:async-stream",
  "dep:if_chain",
  "dep:pasori",
  "dep:rodio",
  "dep:rppal",
]

[dependencies]
tokio = { version = "1.44.2", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "sync",
  "macros",
  "time",
] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
thiserror = "1.0.57"
clap = { version = "4.5.37", features = ["derive", "env"] }
futures-util = "0.3.31"

[dev-dependencies]
mockall = "0.12.1"

[target.'cfg(all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
pasori = { path = "../pasori", optional = true }
rodio = { version = "0.20.1", default-features = false, features = [
  "symphonia-wav",
], optional = true }
rppal = { version = "0.22.1", optional = true }
if_chain = { version = "1.0.2", optional = true }
async-stream = { version = "0.3.6", optional = true }
