[package]
name = "room-manager"
version = "0.2.5"
edition = "2024"

[features]
default = ["raspi-runtime"]
raspi-runtime = ["dep:async-stream", "dep:if_chain", "dep:rodio", "dep:rppal"]

[dependencies]
tokio = { version = "1.50.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "sync",
  "macros",
  "time",
] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive", "env"] }
futures-util = "0.3.32"
pasori = { path = "../pasori" }

[dev-dependencies]
mockall = "0.14.0"

[target.'cfg(all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "wav",
], optional = true }
rppal = { version = "0.22.1", optional = true }
if_chain = { version = "1.0.3", optional = true }
async-stream = { version = "0.3.6", optional = true }
